# zk-context-vault

./: .gitignore  AGENTS.md  Darknet API.md  LICENSE  README.md  compiled-workspace.md  fix_skill.py  operator.md  principles.md  tmpclaude-0dbd-cwd
.collectivist/: AGENTS.md  collection-index.yaml  repo-index-task.xml  repo-index.yaml
.grok/skills/sideriod/assets/mcp/: pyproject.toml
.kiro/: README.md
.obsidian/: appearance.json  community-plugins.json  graph.json  types.json  workspace.json
agents/: README.md  agent-roles.md  agent-steering.md  assistant.md  kiro-hooks.md  kiro-mcp.md  kiro-specs.md  kiro-steering.md  steering-global-mesh.md  steering-global-network.md  steering-global-operator.md  steering-global-principles-draft.md  steering-global-principles.md  steering-project-deck.md  steering-project-zk-context-vault.md  steering-workspace-zk.dev.md
artifacts/: README.md  Untitled.canvas  Untitled.pure.json  bb-drknt-module.canvas  catppuccin-check.canvas  demon-zone-final.canvas  impl-spec-example.canvas  impl-spec-example.md  import-numogram-mini.canvas  json-canvas-import-template.canvas  module-spec.json  numogram-mini.canvas  pretty-jsonl.canvas  zk-context-skillset-plan.canvas  zk-homepage.canvas  zk-mesh.canvas  zk-skillset-universal.canvas  🩷Catppuccin-enhanced.canvas  🩷Catppuccin.pure.json
dashboards/: tasks-dash.md
exocortex/: README.md  context-config.md  context-praxis-antibody.md  context-praxis-council.md  context-praxis-gnomon.md  context-praxis-hygiene.md  context-roles.md  (+16 more)
skills/advanced-astrology/mcp/: pyproject.toml  server.py
(+220 files in other folders)
