[project]
name = "advanced-astrology-mcp"
version = "0.1.0"
description = "Chronographic oracle MCP server — computes the present moment as symbolic tessellation. No API key. No cloud."
requires-python = ">=3.10"
dependencies = ["mcp>=1.0.0"]

[project.optional-dependencies]
moon = ["kerykeion"]

[project.scripts]
advanced-astrology-mcp = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["server.py"]
